objects/LLC_BI__Transaction_Request__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Local_Income_Taxes_Withheld__c</fullName>
        <description>This field is optional. It specifies any additional dollar amount (not percentage) of local income taxes to be withheld from the distribution subtotal.</description>
        <inlineHelpText>Any additional dollar amount (not percentage) of local income taxes to be withheld from the distribution subtotal.</inlineHelpText>
        <label>Local Income Taxes Withheld</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Distribution_Amount__c</fullName>
        <description>This field is optional. The externally calculated, net dollar amount of the distribution to print in the payment detail table on the distribution or election form.</description>
        <inlineHelpText>The externally calculated, net dollar amount of the distribution to print in the payment detail table on the distribution or election form.</inlineHelpText>
        <label>Net Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Election_Of_Payment_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, the beneficiary is making a new election of payment. In the case of a formally established beneficiary IRA, it is the owner making a new election of payment.</description>
        <inlineHelpText>If true the beneficiary is making a new election of payment. In the case of a formally established beneficiary IRA it is the owner making a new election of payment.</inlineHelpText>
        <label>New Election of Payment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Deposit_Investment_Shares__c</fullName>
        <description>This field is optional. It is the number of shares of the non-deposit investment.</description>
        <inlineHelpText>The number of shares of the non-deposit investment.</inlineHelpText>
        <label>Non-Deposit Investment Shares</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Distrubtion_Description__c</fullName>
        <description>This field is optional. For a contribution that is a return of a mistaken distribution(s), this is a description of the date(s) of the original distribution(s).</description>
        <inlineHelpText>For a contribution that is a return of a mistaken distribution(s) this is a description of the date(s) of the original distribution(s).</inlineHelpText>
        <label>Original Distrubtion Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Delivery_Instructions__c</fullName>
        <description>This field is optional. It is the description of any other delivery instructions regarding the payment.</description>
        <inlineHelpText>A description of any other delivery instructions regarding the payment.</inlineHelpText>
        <label>Other Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Delivery_Payment_Options__c</fullName>
        <description>This field is optional. It is a user-defined description of possible medium(s) for the payment/transfer requested (for example, check or ACH transfer).</description>
        <inlineHelpText>User-defined description of possible medium(s) for the payment/transfer requested. (e.g., &apos;check or ACH transfer.&apos;)</inlineHelpText>
        <label>Other Delivery Payment Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Distribution_Payment_Method__c</fullName>
        <description>This field is optional. It is a description of the other payment method type.</description>
        <inlineHelpText>A description of the other payment method type.</inlineHelpText>
        <label>Other Distribution Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payee_Type__c</fullName>
        <description>Users manually populate this optional picklist to identify the payee type for the disbursement. By default, this field is blank.</description>
        <inlineHelpText>Select the payee type for the disbursement.</inlineHelpText>
        <label>Payee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Public Official</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Payee__c</fullName>
        <description>Users manually populate this optional text field to indicate the name of the disbursement recipient. By default, this field is blank.</description>
        <inlineHelpText>Enter the name of the disbursement recipient.</inlineHelpText>
        <label>Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Amount_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of payment amount. NOTE: This amount, when used in the context of a recharacterization, includes the contribution amount plus earnings attributable.</description>
        <inlineHelpText>Specifies the type of payment amount. NOTE: This amount when used in the context of a recharacterization includes the contribution amount plus earnings attributable.</inlineHelpText>
        <label>Payment Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entire balance or contribution amount</fullName>
                </value>
                <value>
                    <fullName>Portion of balance or contribution amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Budget_Requested__c</fullName>
        <description>This field is optional. It is a formula field that calculates the percent of the total budget amount being requested.</description>
        <formula>LLC_BI__Amount_Requested__c  /  LLC_BI__Loan__r.LLC_BI__Budget__r.LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Budget Requested</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Funded__c</fullName>
        <description>This field is optional. It is a formula field that calculates the percentage of the requested amount that has been approved for funding.</description>
        <formula>LLC_BI__Amount_Funded__c  /  LLC_BI__Amount_Requested__c</formula>
        <label>Percent Funded</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portion_Description__c</fullName>
        <description>This field is optional. It describes the portion of the account balance to be converted, transferred, or directly rolled over. In the case of a recharacterization, it is the contribution amount plus earnings attributable to be recharacterized.</description>
        <inlineHelpText>Describes the portion of the account balance to be converted transferred or directly rolled over or in the case of a recharacterization the contribution amount plus earnings attributable to be recharacterized.</inlineHelpText>
        <label>Portion Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RMD_Has_Been_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, the required minimum distribution (RMD) has been satisfied for the distribution year.</description>
        <inlineHelpText>If true the required minimum distribution (RMD) has been satisfied for the distribution year.</inlineHelpText>
        <label>RMD Has Been Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Payment_Type_Other__c</fullName>
        <description>This field is optional. It describes the other investment payment schedule and/or type.</description>
        <inlineHelpText>Describes the other investment payment schedule and/or type</inlineHelpText>
        <label>Request Payment Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Payment_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the investment payment schedule and type.</description>
        <inlineHelpText>Specifies the investment payment schedule and type.</inlineHelpText>
        <label>Request Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately liquidate investments and send cash</fullName>
                </value>
                <value>
                    <fullName>Liquidate specified investments</fullName>
                </value>
                <value>
                    <fullName>Send all investments in kind</fullName>
                </value>
                <value>
                    <fullName>Send assets at maturity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of request.</description>
        <inlineHelpText>Specifies the type of request.</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Direct Rollover</fullName>
                </value>
                <value>
                    <fullName>Funding Distribution</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Requested_Date__c</fullName>
        <description>This field is optional. It is the request date of the transaction request.</description>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_Beneficiary_Contribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of contribution for a Roth Beneficiary IRA.</description>
        <inlineHelpText>Specifies the type of contribution for a Roth Beneficiary IRA.</inlineHelpText>
        <label>Roth Beneficiary Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer from a Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from a Designated Roth Account</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_Contribution_Reason__c</fullName>
        <description>This field is optional. It is the contribution type reason code. The Roth IRA Contribution Type is Qualified Reservists/Designated Disaster Distribution Repayment or Disaster/Combat Zone Postponed Contribution.</description>
        <inlineHelpText>The contribution type reason code.  The Roth IRA Contribution Type is Qualified Reservists/Designated Disaster Distribution Repayment or Disaster/Combat Zone Postponed Contribution.</inlineHelpText>
        <label>Roth Contribution Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_IRA_Contribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the IRA Contribution Type.</description>
        <inlineHelpText>The IRA Contribution Type</inlineHelpText>
        <label>Roth IRA Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular (including Catch-Up)</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from a Designated Roth Account</fullName>
                </value>
                <value>
                    <fullName>Qualified Reservist/Designated Disaster Distribution Repayment</fullName>
                </value>
                <value>
                    <fullName>Disaster/Combat Zone Postponed Contribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_IRA_Distribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of distribution for a Roth IRA.</description>
        <inlineHelpText>Specifies the type of distribution for a Roth IRA.</inlineHelpText>
        <label>Roth IRA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Distribution from a Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Age 59 1/2 or Older</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Transfer to my Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Transfer to spouse&apos;s Roth IRA due to death</fullName>
                </value>
                <value>
                    <fullName>Transfer to former spouse&apos;s Roth IRA due to divorce or legal separation</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of prior tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of current tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Qualified Health Savings Account Funding Distribution (QHSAAFD)</fullName>
                </value>
                <value>
                    <fullName>IRS Levy</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in year after excess contribution, but by my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution after my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Transfer to beneficiary&apos;s Roth Beneficiary IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_IRA_Transfer_Source__c</fullName>
        <description>This field is optional. It is a picklist that specifies the source of funds for a transfer or conversion to a Roth IRA.</description>
        <inlineHelpText>Specifies the source of funds for a transfer or conversion to a Roth IRA.</inlineHelpText>
        <label>Roth IRA Transfer Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Roth</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>SIMPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_Rollover_Source_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the source of funds for a direct rollover to a Roth IRA.</description>
        <inlineHelpText>Specifies the source of funds for a direct rollover to a Roth IRA.</inlineHelpText>
        <label>Roth Rollover Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Designated Roth Account</fullName>
                </value>
                <value>
                    <fullName>Eligible Retirement Plan (other than a Designated Roth Account)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Simple_IRA_Contibution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of contribution for a SIMPLE IRA.</description>
        <inlineHelpText>Specifies the type of contribution for a SIMPLE IRA.</inlineHelpText>
        <label>SIMPLE IRA Contibution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Contribution</fullName>
                </value>
                <value>
                    <fullName>Rollover from a SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>Transfer from a SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Income_Withholdings_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It indicates if the account holder elects at the time of a specific IRA or other tax-deferred plan distribution to have state income tax withheld.</description>
        <inlineHelpText>The account holder elects at the time of a specific IRA or other tax-deferred plan distribution to have state income tax withheld.</inlineHelpText>
        <label>State Income Withholdings Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Income_Withholdings_Percentage__c</fullName>
        <description>This field is optional. It is the percentage that the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The percentage that the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</inlineHelpText>
        <label>State Income Withholdings Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Income_Withholdings__c</fullName>
        <description>This field is optional. It is the dollar amount which the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The dollar amount which the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</inlineHelpText>
        <label>State Income Withholdings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and can be auto-populated. It is a picklist that specifies the status of the transaction request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Inspection</fullName>
                    <default>true</default>
                    <label>Pending Inspection</label>
                </value>
                <value>
                    <fullName>Pending Amounts</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Ten_Pct_Federal_Withholding_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, the IRA owner elects to have 10% federal income tax withheld from the IRA distribution.</description>
        <inlineHelpText>If true the IRA owner elects to have 10% Federal income tax withheld from the IRA distribution.</inlineHelpText>
        <label>10% Federal Withholding Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_Benficiary_IRA_Contribution__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of contribution for a Traditional Beneficiary IRA.</description>
        <inlineHelpText>Specifies the type of contribution for a Traditional Beneficiary IRA.</inlineHelpText>
        <label>Trad Benficiary IRA Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer from an IRA</fullName>
                </value>
                <value>
                    <fullName>Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_IRA_Contribution_Source__c</fullName>
        <description>This field is optional. It is a picklist that specifies the source for the rollover to a Traditional IRA.</description>
        <inlineHelpText>Specifies the source for the rollover to a Traditional IRA.</inlineHelpText>
        <label>Traditional IRA Contribution Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional IRA</fullName>
                </value>
                <value>
                    <fullName>Qualified Plan</fullName>
                </value>
                <value>
                    <fullName>Tax-Sheltered Annuity (TSA)</fullName>
                </value>
                <value>
                    <fullName>457(b)</fullName>
                </value>
                <value>
                    <fullName>SIMPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_IRA_Contribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the IRA Contribution Type.</description>
        <inlineHelpText>The IRA Contribution Type</inlineHelpText>
        <label>Traditional IRA Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular (including Catch-Up)</fullName>
                </value>
                <value>
                    <fullName>Simplified Employee Pension (SEP) Plan</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Qualified Reservist/Designated Disaster Distribution Repayment</fullName>
                </value>
                <value>
                    <fullName>Disaster/Combat Zone Postponed Contribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_IRA_Distribution_Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of distribution for a Traditional or Simple IRA.</description>
        <inlineHelpText>Specifies the type of distribution for a Traditional or Simple IRA.</inlineHelpText>
        <label>Traditional IRA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Distribution no known exception</fullName>
                </value>
                <value>
                    <fullName>Early Distribution IRS Levy or other exception</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Direct Rollover to an employer-sponsored Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Qualified Health Savings Account Funding Distribution (QHSAAFD)</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in year after excess contribution but by my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution after my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of prior tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of current tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>SIMPLE IRA Distribution During Two-Year Period</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Transfer to another IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Transaction_Request_Aggregate__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this optional field to indicate the transaction request aggregate associated with the transaction request. By default this field is blank.</description>
        <inlineHelpText>This system-populated field indicates the transaction request aggregate associated with the transaction request.</inlineHelpText>
        <label>Transaction Request Aggregate</label>
        <referenceTo>LLC_BI__Transaction_Request_Aggregate__c</referenceTo>
        <relationshipLabel>Transaction Requests</relationshipLabel>
        <relationshipName>Transaction_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Transfer_Account_ID__c</fullName>
        <description>This field is optional. It is the identification number assigned to the account or plan at the transferring financial institution. For recharacterizations, this is the plan or account number of the plan where the original contribution was made that is to be recharacterized. It may be at either the same or a third party (&quot;transferor&quot;) financial institution.</description>
        <inlineHelpText>The ID assigned to the account or plan at the transferring financial institution. For recharacterizations, this is the ID number of the plan where the original contribution was made.</inlineHelpText>
        <label>Transfer Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional. It is a picklist that specifies the type of transaction request.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disbursement</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Contribution</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TXNR-{000000000}</displayFormat>
        <label>Transaction Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Disbursements_Negative_Amount_Error</fullName>
        <active>true</active>
        <description>System displays error if user enters negative amount.</description>
        <errorConditionFormula>LLC_BI__Amount__c  &lt; 0 &amp;&amp; ISPICKVAL(LLC_BI__Type__c, &quot;Disbursement&quot;)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Amount__c</errorDisplayField>
        <errorMessage>Enter a positive value in this required field.</errorMessage>
    </validationRules>
</CustomObject>